--- a/less/main.less
+++ b/less/main.less
@@ -10,3 +10,40 @@
 article, aside, details, figcaption, figure, footer, header, main, nav, section, summary {
   display:block;
 }
+
+// Soleil light
+@font-face {
+  font-family: soleil,sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+
+// soleil bold
+@font-face {
+  font-family: soleil, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+// Ingra CD Regular
+@font-face {
+font-family: ingra-condensed, sans-serif;
+font-weight: 400;
+font-style: normal;
+}
+
+
+
+h1, h2, h3, h4, h5, h6{
+  font-family: soleil, sans-serif;
+  font-weight: 600;
+  color: @orange;
+
+}
+
+p{
+  font-family: soleil,sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
