--- a/less/variables.less
+++ b/less/variables.less
@@ -3,7 +3,7 @@
 @teal:          #77bdc1;
 @blue:          #238e99;
 @darkblue:      #035d6f;
-@white:         #f1f2f2;
+@gray:         #f1f2f2;
 @yellow:        #f8b966;
 @orange:        #c6712c;
 @black:         #302d2e;
