--- a/less/main.less
+++ b/less/main.less
@@ -38,7 +38,6 @@ font-style: normal;
 h1, h2, h3, h4, h5, h6{
   font-family: soleil, sans-serif;
   font-weight: 600;
-  color: @orange;
 
 }
 
@@ -46,4 +45,77 @@ p{
   font-family: soleil,sans-serif;
   font-weight: 300;
   font-style: normal;
+}
+
+
+
+
+
+/*===============================================
+
+
+
+HOME stylesheet
+
+===============================================*/
+
+
+#home{
+  padding-top: 5%;
+  background-color: @gray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h2, h4{
+    color: @darkblue;
+  }
+  h2{
+    font-size: 3.5em;
+  }
+  h4{
+    font-size: 1.7em;
+  }
+  h5{
+    color: @blue;
+    text-transform: uppercase;
+    font-weight:600;
+    font-size: 1.4em
+  }
+
+  h6{
+    font-weight: 300;
+    color: @blue;
+    font-size: 1.05em
+  }
+p{
+  color: @black;
+}
+
+.homesection{
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+}
+.blogtop{
+  padding-top: 5%;
+p{
+  font-size: 1.15em
+}
+}
+.blogmiddle{
+  padding-top: 4%;
+}
+
+.Article{
+  padding-top: 4%;
+  h4,h5, p{
+    padding-top: 2%
+  }
+}
+
+#blog{
+  background-color: white;
+}
+
+
 }
