--- a/less/main.less
+++ b/less/main.less
@@ -71,6 +71,7 @@ HOME stylesheet
   }
   h2{
     font-size: 3.5em;
+    margin-top: -6%
   }
   h4{
     font-size: 1.7em;
@@ -96,8 +97,58 @@ p{
   display: flex;
   flex-direction: column;
 }
+#hometop{
+  display: flex;
+flex-direction: column;
+align-items: center;
+  padding-bottom: 10%;
+
+  form{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+
+      input[type=email]{
+        width: 80%;;
+        padding:1.2% 2%;
+        margin: .8% 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+      }
+
+      button {
+        width: 25%;
+        background-color:@lightblue;
+        color: @darkblue;
+        padding: 1.4% 2%;
+        margin: .8% 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-family: soleil, sans-serif;
+        font-weight: 600;
+        font-size: 1.5em;
+        text-transform: capitalize;
+      }
+
+      input[type=email]:hover {
+        background-color:@lightblue;
+      }
+
+      button:hover{
+
+        color: @yellow;
+      }
+
+  }
+}
+
 .blogtop{
-  padding-top: 5%;
 p{
   font-size: 1.15em
 }
@@ -115,6 +166,18 @@ p{
 
 #blog{
   background-color: white;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.blogcontainer{
+  width: 90%;
+display: flex;
+flex-direction: column;
+// align-items: center;
+
 }
 
 
