--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,7 @@ HOME stylesheet
 }
 #home h2 {
   font-size: 3.5em;
+  margin-top: -6%;
 }
 #home h4 {
   font-size: 1.7em;
@@ -89,8 +90,46 @@ HOME stylesheet
   display: flex;
   flex-direction: column;
 }
-#home .blogtop {
-  padding-top: 5%;
+#home #hometop {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 10%;
+}
+#home #hometop form {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#home #hometop form input[type=email] {
+  width: 80%;
+  padding: 1.2% 2%;
+  margin: .8% 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+#home #hometop form button {
+  width: 25%;
+  background-color: #c5e2df;
+  color: #035d6f;
+  padding: 1.4% 2%;
+  margin: .8% 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: soleil, sans-serif;
+  font-weight: 600;
+  font-size: 1.5em;
+  text-transform: capitalize;
+}
+#home #hometop form input[type=email]:hover {
+  background-color: #c5e2df;
+}
+#home #hometop form button:hover {
+  color: #f8b966;
 }
 #home .blogtop p {
   font-size: 1.15em;
@@ -108,4 +147,13 @@ HOME stylesheet
 }
 #home #blog {
   background-color: white;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#home .blogcontainer {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
 }
