--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ HOME stylesheet
 }
 #home h4 {
   font-size: 1.7em;
+  text-align: center;
 }
 #home h5 {
   color: #238e99;
@@ -122,7 +123,7 @@ HOME stylesheet
   cursor: pointer;
   font-family: soleil, sans-serif;
   font-weight: 600;
-  font-size: 1.5em;
+  font-size: 1em;
   text-transform: capitalize;
 }
 #home #hometop form input[type=email]:hover {
@@ -151,9 +152,32 @@ HOME stylesheet
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80%;
 }
 #home .blogcontainer {
   width: 90%;
   display: flex;
   flex-direction: column;
+}
+#home .moreText {
+  display: none;
+}
+#home .text.show-more .moreText {
+  display: inline;
+}
+#home .read-more-btn {
+  background-color: white;
+  color: #f8b966;
+  padding: .25% .5%;
+  margin: .8% 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: soleil, sans-serif;
+  font-weight: 600;
+  font-size: .7em;
+  text-transform: capitalize;
+}
+#home .read-more-btn .plus {
+  color: #c6712c;
 }
