--- a/css/main.css
+++ b/css/main.css
@@ -181,3 +181,79 @@ HOME stylesheet
 #home .read-more-btn .plus {
   color: #c6712c;
 }
+/*===============================================
+
+
+
+FOOTER
+
+===============================================*/
+footer {
+  width: 100%;
+  margin-top: 6%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+footer .footerbuttons {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+}
+footer .footerbuttons button {
+  width: 100%;
+  background-color: #c5e2df;
+  color: #035d6f;
+  padding: 1.4% 2%;
+  margin: .8% 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: soleil, sans-serif;
+  font-weight: 600;
+  font-size: 1em;
+  text-transform: capitalize;
+}
+footer .footerbuttons button:hover {
+  color: #f8b966;
+}
+footer #footerbottom {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  margin-top: 10%;
+  align-items: center;
+}
+footer .footerleft {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+}
+footer .footerleft .footerleft-top {
+  display: flex;
+  flex-direction: row;
+}
+footer .footerleft .footerleft-top img {
+  width: 30%;
+}
+footer .footerleft .footerleft-top p {
+  font-size: .5em;
+  text-align: center;
+}
+footer footer .footerleft .footerleft-btm h6 {
+  font-size: 0.7em;
+}
+footer .footercenter {
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer .footercenter img {
+  width: 50%;
+}
+footer .footerright {
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+}
