--- a/less/main.less
+++ b/less/main.less
@@ -214,6 +214,92 @@ flex-direction: column;
 }
 
 
+}
+
+
+
+
+/*===============================================
+
+
+
+FOOTER
+
+===============================================*/
+
+footer{
+  width: 100%;
+  margin-top: 6%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .footerbuttons{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    button {
+      width: 100%;
+      background-color:@lightblue;
+      color: @darkblue;
+      padding: 1.4% 2%;
+      margin: .8% 0;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-family: soleil, sans-serif;
+      font-weight: 600;
+      font-size: 1em;
+      text-transform: capitalize;
+    }
+    button:hover{
+      color: @yellow;
+    }
+
+  }
+  #footerbottom{
+      display: flex;
+      flex-direction: row;
+      width: 90%;
+      margin-top: 10%;
+      align-items: center;
+    }
+.footerleft{
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  .footerleft-top{
+    display: flex;
+    flex-direction: row;
+    img{
+      width: 30%;
+    }
+    p{
+      font-size: .5em;
+      text-align: center;
+    }
+  }
+
+}
+
+footer .footerleft .footerleft-btm h6 {
+    font-size: 0.7em;}
+
+.footercenter{
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  img{
+    width: 50%;
+  }
+}
+
+.footerright{
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+}
 
 
 
