--- a/css/main.css
+++ b/css/main.css
@@ -190,7 +190,7 @@ FOOTER
 ===============================================*/
 footer {
   width: 100%;
-  margin-top: 6%;
+  margin: 6% 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -245,6 +245,7 @@ footer footer .footerleft .footerleft-btm h6 {
 }
 footer .footercenter {
   width: 30%;
+  margin: 0 4%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -256,4 +257,26 @@ footer .footerright {
   width: 30%;
   display: flex;
   flex-direction: row;
+}
+footer .footerright ul li {
+  list-style-type: none;
+  font-size: .7em;
+  font-family: soleil, sans-serif;
+  font-weight: 600;
+  color: #238e99;
+}
+footer .footerright .footerright-right {
+  padding-left: 20%;
+}
+/*===============================================
+
+
+
+MEDIA QUERY
+
+===============================================*/
+@media (max-width: 560px) {
+  #footerbottom {
+    flex-direction: column;
+  }
 }
