--- a/less/main.less
+++ b/less/main.less
@@ -120,6 +120,7 @@ align-items: center;
         border: 1px solid #ccc;
         border-radius: 4px;
         box-sizing: border-box;
+        color: @black;
       }
 
       button {
@@ -337,9 +338,3 @@ footer .footerleft .footerleft-btm h6 {
 MEDIA QUERY
 
 ===============================================*/
-@media (max-width:560px) {
-
-#footerbottom{
-  flex-direction: column;
-}
-}
