--- a/css/main.css
+++ b/css/main.css
@@ -190,40 +190,101 @@ SUPPORT stylesheet
 
 
 
+/* Support Information Section*/
 .support {
-  padding: 50px;
+  padding: 2% 10% 0 10%;
   background-color: #f1f2f2;
   background-image: linear-gradient(#f1f2f2, #025D6F);
 }
-
 .supportinfo{
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
 }
-
 .supportboxes {
   display: flex;
 }
 .supportboxes .col {
   flex: 2;
 }
+.supportboxes .col1 {
+  flex: 2;
+  background-image: url(../img/turtle-06.jpg);
+  background-size: cover;
+  width: 100%;
+  min-height: 300px;
+  background-repeat: no-repeat;
+  background-color:#f1f2f2;
+}
+
+.supportboxes .col2 {
+  flex: 2;
+  background-image: url(../img/turtle-14.jpg);
+  background-size: cover;
+  width: 100%;
+  min-height: 300px;
+  background-repeat: no-repeat;
+  background-color:#f1f2f2;
+}
+
+.supportboxes .col3 {
+  flex: 2;
+  background-image: url(../img/turtle-10.jpg);
+  background-size: cover;
+  width: 100%;
+  min-height: 300px;
+  background-repeat: no-repeat;
+  background-color:#f1f2f2;
+}
+
 .supportboxes-thirds {
   display: flex;
   justify-content: space-between;
 }
 
-.supportform{
-  padding: 50px;
-
+.supportboxes { 
+  margin: 0;
 }
+
+.support button {
+    background-color: #c5e2df;
+    color: #035d6f;
+    padding: 1.5% 3%;
+    margin: 5% 2.5%;
+    border: none;
+    border-radius: 4px;
+    font-family: soleil, sans-serif;
+    font-weight: 600;
+    font-size: 1rem;
+}
+
+.col {
+  background-color: #f1f2f2;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+/* Support Form*/
 
 .form {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-gap: 20px;
+  grid-gap: 2%;
 }
+
+.supportform{
+  padding: 50px;
+}
+
+.form input{
+  height: 30px;
+}
+
+.form select{
+  height: 30px;
+}
+
 .fullwidth {
   grid-column: span 2;
 }
@@ -234,15 +295,52 @@ SUPPORT stylesheet
   grid-gap: 20px;
 }
 
-.submit {
-  grid-column: 2;
-  background-color: lightblue;
-  padding: 10px;
+.bottombutton {
+  display: flex;
+  justify-content: center;
+  padding-top: 10%;
 }
 
-.container {
-  margin: 5vw 10vw;
+/* Support Text*/
+
+.support h2{
+  font-size: 2rem;
+  color: #f1f2f2;
+  text-align: center;
 }
+
+label{
+  font-family: ingra-condensed, sans-serif;
+  font-size: 1rem;
+  color: #f1f2f2;
+}
+
+.support h3{
+  font-size: 2rem;
+  color: #025D6F;
+  padding: 2%;
+}
+
+.support h4{
+  font-size: 1.65rem;
+  color: #c6712c;
+  padding: 2%;
+}
+
+.support h5{
+  font-family: ingra-condensed, sans-serif;
+  font-size: 1.4rem;
+  color: #f8b966;
+  padding: 2%;
+  text-align: center;
+}
+
+.support p{
+  padding: 0% 3%;
+  font-size: 0.85rem;
+}
+
+
 
 @media (max-width: 400px) {
   .supportboxes,
@@ -255,13 +353,6 @@ SUPPORT stylesheet
   }
 }
 
-.supportboxes { 
-  margin: 0;
-}
-.col {
-  background: #f1f2f2;
-  padding: 20px;
-}
 
 
 
