--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,13 @@ HOME stylesheet
   color: #c6712c;
 }
 
+
+
+
+
+
+
+
 /*===============================================
 
 SUPPORT stylesheet
@@ -190,7 +197,16 @@ SUPPORT stylesheet
 
 
 
-/* Support Information Section*/
+
+
+
+
+
+
+
+
+
+/**************** Support Info Section *****************/
 .support {
   padding: 2% 10% 0 10%;
   background-color: #f1f2f2;
@@ -213,7 +229,7 @@ SUPPORT stylesheet
   background-image: url(../img/turtle-06.jpg);
   background-size: cover;
   width: 100%;
-  min-height: 300px;
+  min-height: 400px;
   background-repeat: no-repeat;
   background-color:#f1f2f2;
 }
@@ -223,7 +239,7 @@ SUPPORT stylesheet
   background-image: url(../img/turtle-14.jpg);
   background-size: cover;
   width: 100%;
-  min-height: 300px;
+  min-height: 400px;
   background-repeat: no-repeat;
   background-color:#f1f2f2;
 }
@@ -233,7 +249,7 @@ SUPPORT stylesheet
   background-image: url(../img/turtle-10.jpg);
   background-size: cover;
   width: 100%;
-  min-height: 300px;
+  min-height: 400px;
   background-repeat: no-repeat;
   background-color:#f1f2f2;
 }
@@ -265,7 +281,7 @@ SUPPORT stylesheet
   padding-bottom: 20px;
 }
 
-/* Support Form*/
+/************** Support Form ******************/
 
 .form {
   display: grid;
@@ -301,7 +317,7 @@ SUPPORT stylesheet
   padding-top: 10%;
 }
 
-/* Support Text*/
+/**************** Support Font *********************/
 
 .support h2{
   font-size: 2rem;
@@ -340,6 +356,7 @@ label{
   font-size: 0.85rem;
 }
 
+/**************** Support Media Query **********************/
 
 
 @media (max-width: 400px) {
@@ -352,6 +369,8 @@ label{
     }
   }
 }
+
+
 
 
 
