--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ ul {
 
 #dropdown li {
   color: white;
-  padding: 0px 10px;
+  padding: 0 10%;
   background-color: #025D6F;
   font-family: ingra-condensed, sans-serif;
 }
